execCommand copies the backgroung-color of the enclosing element to the element being edited. https://bugs.webkit.org/show_bug.cgi?id=91783

Patch by Sukolsak Sakshuwong <sukolsak@google.com> on 2012-07-27
Reviewed by Ryosuke Niwa.

Source/WebCore:

InsertListCommand and some other edit commands remove redundant
style properties after their DOM modification by using
StylePropertySet::removeEquivalentProperties.  However, this method
does not remove redundant background-color properties such as
"background-color: white" and "background-color: #fff" because
it compares them using cssText and thus treats them as different.
Add code to convert background colors to RGBA and then compare them.

Test: editing/style/redundant-background-color.html

* editing/EditingStyle.cpp:
(WebCore::getRGBABackgroundColor):
(WebCore):
(WebCore::getPropertiesNotIn):

LayoutTests:

This tests to make sure that WebKit removes redundant "background-color"
property after execCommand.

* editing/style/redundant-background-color-expected.txt: Added.
* editing/style/redundant-background-color.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@123940 bbb929c8-8fbe-4397-9dbb-9b2b20218538